--- a/src/main/resources/templates/admin/setting/contacts.html
+++ b/src/main/resources/templates/admin/setting/contacts.html
@@ -98,7 +98,9 @@
         </div>
     </form>
 
-    <form th:unless="${createMode}" th:action="@{/admin/setting/contacts/update}" th:object="${contact}" method="post">
+    <form th:unless="${createMode}" th:action="@{/admin/setting/contacts/update}" method="post" th:object="${contact}">
+        <input type="hidden" th:field="*{id}"/>
+        <input type="hidden" th:field="*{password}"/>
         <div class="settings-container">
             <div class="section contacts">
                 <h3>Contacts</h3>
@@ -148,30 +150,41 @@
                     <h3>Request Emails</h3>
                     <div th:each="email, stat : ${requestEmails}" class="email-group">
                         <input type="text" th:name="'requestEmails[' + ${stat.index} + ']'" th:value="${email}" placeholder="Email"/>
-                        <button type="button" class="btn-remove" th:onclick="'removeRequestEmail(this)'">Remove</button>
+                        <form th:action="@{/admin/setting/contacts/removeRequestEmail}" method="post">
+                            <input type="hidden" th:name="contactId" th:value="${contact.id}" />
+                            <input type="hidden" th:name="email" th:value="${email}" />
+                            <button type="submit" class="btn-remove">Remove</button>
+                        </form>
                     </div>
                     <button type="button" class="btn-add" onclick="addRequestEmail()">Add Email</button>
                 </div>
 
-                <div class="section change-password" th:object="${passwordForm}">
+                <div class="section change-password">
                     <h3>Change Password</h3>
-                    <div class="form-group" th:classappend="${#fields.hasErrors('currentPassword')} ? 'has-error'">
-                        <label for="update-currentPassword">Current Password</label>
-                        <input type="password" th:field="*{currentPassword}" id="update-currentPassword" placeholder="Current Password"/>
-                        <div class="error" th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}"></div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group" th:classappend="${#fields.hasErrors('newPassword')} ? 'has-error'">
-                            <label for="update-newPassword">New Password</label>
-                            <input type="password" th:field="*{newPassword}" id="update-newPassword" placeholder="New Password"/>
-                            <div class="error" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"></div>
+                    <form th:action="@{/admin/setting/contacts/updatePassword}" th:object="${passwordForm}" method="post">
+                        <div class="form-group" th:classappend="${#fields.hasErrors('currentPassword')} ? 'has-error'">
+                            <label for="update-currentPassword">Current Password</label>
+                            <input type="password" th:field="*{currentPassword}" id="update-currentPassword" placeholder="Current Password"/>
+                            <div class="error" th:if="${#fields.hasErrors('currentPassword')}" th:errors="*{currentPassword}"></div>
                         </div>
-                        <div class="form-group" th:classappend="${#fields.hasErrors('confirmPassword')} ? 'has-error'">
-                            <label for="update-confirmPassword">Confirm Password</label>
-                            <input type="password" th:field="*{confirmPassword}" id="update-confirmPassword" placeholder="Confirm Password"/>
-                            <div class="error" th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"></div>
+                        <div class="form-row">
+                            <div class="form-group" th:classappend="${#fields.hasErrors('newPassword')} ? 'has-error'">
+                                <label for="update-newPassword">New Password</label>
+                                <input type="password" th:field="*{newPassword}" id="update-newPassword" placeholder="New Password"/>
+                                <div class="error" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"></div>
+                            </div>
+                            <div class="form-group" th:classappend="${#fields.hasErrors('confirmPassword')} ? 'has-error'">
+                                <label for="update-confirmPassword">Confirm Password</label>
+                                <input type="password" th:field="*{confirmPassword}" id="update-confirmPassword" placeholder="Confirm Password"/>
+                                <div class="error" th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"></div>
+                            </div>
                         </div>
-                    </div>
+                        <div class="form-actions">
+                            <div class="actions">
+                                <button class="btn-save" type="submit">Update Password</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
 
@@ -191,7 +204,7 @@
 <script>
     function addRequestEmail() {
         const container = document.querySelector('.request-emails');
-        const index = container.children.length - 1;
+        const index = container.querySelectorAll('.email-group').length;
         const div = document.createElement('div');
         div.className = 'email-group';
         div.innerHTML = `
