--- a/src/main/resources/templates/admin/menu.html
+++ b/src/main/resources/templates/admin/menu.html
@@ -6,6 +6,7 @@
     <th:block th:insert="~{fragments/favicon :: favicon}"></th:block>
     <link rel="stylesheet" th:href="@{/css/normalize.css}"/>
     <link rel="stylesheet" th:href="@{/css/menu.css}"/>
+    <link rel="stylesheet" th:href="@{/css/real-estate.css}"/>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
             </div>
             <ul>
                 <li class="menu-item"><a th:href="@{/admin/main/requests}">Requests</a></li>
-                <li class="menu-item"><a th:href="@{/admin/main/objects}">Objects</a></li>
+                <li class="menu-item"><a th:href="@{/admin/main/real-estates}">Real estates</a></li>
                 <li class="menu-item"><a th:href="@{/admin/main/new-buildings}">New buildings</a></li>
                 <li class="menu-item"><a th:href="@{/admin/main/services}">Services</a></li>
                 <li class="menu-item">
